# youtube_summarizer

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  comments.md  crew.py  main.py  report.md
src/config/: agents.yaml
src/tools/: __init__.py  custom_tool.py
